added application name

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka
 server.port=2221
 
-
+application.name=hello
 
 #server.servlet.context-path=/stockmarket
 spring.application.name=stockmicroservice
